--- a/main.ipynb
+++ b/main.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "651d24cf",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.2\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.2\u001b[0m\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
      ]
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "7b374296",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fe77792a",
    "metadata": {},
    "outputs": [],
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "0696d5ab",
    "metadata": {},
    "outputs": [],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "55115740",
    "metadata": {},
    "outputs": [],
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "ba3907df",
    "metadata": {},
    "outputs": [],
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "feb53dec",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "0d43d30d",
    "metadata": {},
    "outputs": [],
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "77e7c95f",
    "metadata": {},
    "outputs": [],
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "4ff1ad12",
    "metadata": {},
    "outputs": [],
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "69dc0b2c",
    "metadata": {},
    "outputs": [],
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "1779e0a2",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Обучено на примерах: 623\n"
+      "Обучено на примерах: 1788\n"
      ]
     }
    ],
@@ -525,68 +525,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "98b1136e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import pandas as pd\n",
+    "from typing import List, Tuple, Set\n",
+    "\n",
+    "# ---- ваши уже готовые функции/объекты должны быть объявлены заранее ----\n",
+    "# feats_for_boundary, restore_spaces, ctype, is_vowel, DIGITS, RUS_LETTERS, model и т.п.\n",
+    "# ------------------------------------------------------------------------\n",
+    "\n",
+    "def strip_spaces(s: str) -> str:\n",
+    "    \"\"\"Убираем все пробелы (на случай, если в исходнике попались).\"\"\"\n",
+    "    return \"\".join(ch for ch in s if ch != \" \")\n",
+    "\n",
+    "def positions_from_model(model, s0: str, thr: float = 0.5) -> Set[int]:\n",
+    "    \"\"\"\n",
+    "    Возвращает множество позиций (индексов), куда вставлять пробел, для строки s0 без пробелов.\n",
+    "    Позиция i означает пробел МЕЖДУ s0[i-1] и s0[i].\n",
+    "    \"\"\"\n",
+    "    if len(s0) <= 1:\n",
+    "        return set()\n",
+    "    feats = [feats_for_boundary(s0, i) for i in range(len(s0)-1)]\n",
+    "    proba = model.predict_proba(feats)[:, 1]\n",
+    "    # если p>=thr, вставляем пробел ПОСЛЕ символа с индексом i => позиция i+1\n",
+    "    pos = {i+1 for i, p in enumerate(proba) if p >= thr}\n",
+    "    # не ставим пробел на позиции 0\n",
+    "    pos.discard(0)\n",
+    "    # приводим к отсортированному виду при выводе\n",
+    "    return set(sorted(pos))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "632514b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PUNCT_NO_SPACE_BEFORE = set(\",;:.?!)]»\")\n",
+    "PUNCT_SPACE_AFTER     = set(\",;:?!)»\")\n",
+    "DASHES                = \"—–-\"\n",
+    "\n",
+    "def postprocess_positions(s0: str, pos_set: Set[int]) -> Set[int]:\n",
+    "    \"\"\"\n",
+    "    Корректируем предсказанные позиции простыми правилами пунктуации.\n",
+    "    s0 — строка БЕЗ пробелов.\n",
+    "    \"\"\"\n",
+    "    n = len(s0)\n",
+    "    pos = set(pos_set)\n",
+    "\n",
+    "    # 1) убрать пробел ПЕРЕД знаками, где он не нужен: \" , . ; : ? ! ) »\"\n",
+    "    for i in list(pos):\n",
+    "        if 0 <= i < n and s0[i] in PUNCT_NO_SPACE_BEFORE:\n",
+    "            pos.discard(i)\n",
+    "\n",
+    "    # 2) добавить пробел ПОСЛЕ некоторых знаков, если далее буква/цифра/открывающая кавычка/скобка\n",
+    "    for i, ch in enumerate(s0):\n",
+    "        if ch in PUNCT_SPACE_AFTER and i+1 < n:\n",
+    "            if s0[i+1].isalnum() or s0[i+1] in \"«(\\\"'[\":\n",
+    "                pos.add(i+1)\n",
+    "\n",
+    "    # 3) тире — пробел по обе стороны, если по краям буквы/цифры\n",
+    "    for i, ch in enumerate(s0):\n",
+    "        if ch in DASHES:\n",
+    "            if i > 0 and s0[i-1].isalnum():\n",
+    "                pos.add(i)\n",
+    "            if i+1 < n and s0[i+1].isalnum():\n",
+    "                pos.add(i+1)\n",
+    "\n",
+    "    # 4) «5,3» внутри числа — НЕ добавлять пробел после запятой\n",
+    "    for i in list(pos):\n",
+    "        if 0 <= i-1 < n and 0 <= i < n:\n",
+    "            if s0[i-1].isdigit() and s0[i] == ',' and i+1 < n and s0[i+1].isdigit():\n",
+    "                pos.discard(i+1)\n",
+    "\n",
+    "    pos.discard(0)\n",
+    "    return set(sorted(pos))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "10d719be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def restore_by_positions(s0: str, positions: Set[int]) -> str:\n",
+    "    \"\"\"Из s0 и множества позиций собираем текст с пробелами (удобно для отладки).\"\"\"\n",
+    "    out = []\n",
+    "    for i, ch in enumerate(s0):\n",
+    "        if i in positions:\n",
+    "            out.append(\" \")\n",
+    "        out.append(ch)\n",
+    "    return \"\".join(out)\n",
+    "\n",
+    "def predict_positions_with_pp(model, s: str, thr: float = 0.55) -> List[int]:\n",
+    "    \"\"\"\n",
+    "    Полная обёртка: убираем пробелы, предсказываем позиции, делаем пост-процессинг.\n",
+    "    Возвращаем ОТСОРТИРОВАННЫЙ список индексов.\n",
+    "    \"\"\"\n",
+    "    s0 = strip_spaces(str(s))\n",
+    "    pos = positions_from_model(model, s0, thr=thr)\n",
+    "    pos = postprocess_positions(s0, pos)\n",
+    "    return sorted(pos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d666dc60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def restore_by_positions(s0: str, positions: Set[int]) -> str:\n",
+    "    \"\"\"Из s0 и множества позиций собираем текст с пробелами (удобно для отладки).\"\"\"\n",
+    "    out = []\n",
+    "    for i, ch in enumerate(s0):\n",
+    "        if i in positions:\n",
+    "            out.append(\" \")\n",
+    "        out.append(ch)\n",
+    "    return \"\".join(out)\n",
+    "\n",
+    "def predict_positions_with_pp(model, s: str, thr: float = 0.55) -> List[int]:\n",
+    "    \"\"\"\n",
+    "    Полная обёртка: убираем пробелы, предсказываем позиции, делаем пост-процессинг.\n",
+    "    Возвращаем ОТСОРТИРОВАННЫЙ список индексов.\n",
+    "    \"\"\"\n",
+    "    s0 = strip_spaces(str(s))\n",
+    "    pos = positions_from_model(model, s0, thr=thr)\n",
+    "    pos = postprocess_positions(s0, pos)\n",
+    "    return sorted(pos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ea16e710",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   id                 text_no_spaces  predicted_positions\n",
-      "0   0                куплюайфон14про          [5, 10, 12]\n",
-      "1   1             ищудомвПодмосковье            [3, 6, 7]\n",
-      "2   2  сдаюквартирусмебельюитехникой  [4, 12, 13, 20, 21]\n",
-      "3   3     новыйдивандоставканедорого      [5, 10, 18, 20]\n",
-      "4   4                 отдамдаромкошк              [5, 10]\n",
-      "5   5          работавМосквеудаленно       [6, 7, 13, 14]\n",
-      "6   6          куплютелевизорPhilips              [5, 14]\n",
-      "7   7        ищугрузчиковдляпереезда          [3, 12, 15]\n",
-      "8   8           ремонтквартирподключ          [6, 13, 16]\n",
-      "9   9                 куплюноутбукHP              [5, 12]\n",
-      "Файл submission.csv готов 🚀\n"
+      "Готово: submission.csv\n"
      ]
     }
    ],
    "source": [
-    "def strip_spaces(s: str) -> str:\n",
-    "    return \"\".join(ch for ch in s if ch != \" \")\n",
+    "# df — это исходный task_data: колонки ['id', 'text_no_spaces']\n",
+    "# ВАЖНО: колонка predicted_positions — ТИП ДАННЫХ СТРОКА, например \"[1, 14]\"\n",
     "\n",
-    "def space_positions_from_spaced_text(spaced: str):\n",
-    "    \"\"\"Возвращает список индексов пробелов в строке без пробелов\"\"\"\n",
-    "    pos = []\n",
-    "    seen = 0\n",
-    "    for ch in spaced:\n",
-    "        if ch == \" \":\n",
-    "            pos.append(seen)\n",
-    "        else:\n",
-    "            seen += 1\n",
-    "    return pos\n",
+    "def to_str_list(indices: List[int]) -> str:\n",
+    "    return \"[\" + \", \".join(str(i) for i in indices) + \"]\"\n",
     "\n",
-    "preds = []\n",
-    "positions = []\n",
+    "def make_submission(df: pd.DataFrame, model, thr: float = 0.55) -> pd.DataFrame:\n",
+    "    preds_str = []\n",
+    "    for s in df[\"text_no_spaces\"]:\n",
+    "        pos = predict_positions_with_pp(model, s, thr=thr)\n",
+    "        preds_str.append(to_str_list(pos))\n",
+    "    sub = df.copy()\n",
+    "    sub[\"predicted_positions\"] = preds_str\n",
+    "    sub = sub[[\"id\", \"predicted_positions\"]]\n",
+    "    return sub\n",
     "\n",
-    "for s in df[\"text_no_spaces\"].astype(str):\n",
-    "    s0 = strip_spaces(s)  # убираем пробелы, если они есть\n",
-    "    spaced = restore_spaces(model, s0, thr=0.5)  # предсказанный текст с пробелами\n",
-    "    preds.append(spaced)\n",
-    "    positions.append(str(space_positions_from_spaced_text(spaced)))  # строка вида \"[5, 8, 13]\"\n",
-    "\n",
-    "# формируем submission\n",
-    "res = df.copy()\n",
-    "res[\"predicted_positions\"] = positions\n",
-    "\n",
-    "# сохраняем\n",
-    "res.to_csv(\"submission.csv\", index=False, encoding=\"utf-8\")\n",
-    "\n",
-    "print(res.head(10))\n",
-    "print(\"Файл submission.csv готов 🚀\")"
+    "# пример:\n",
+    "# df = pd.read_csv(\"dataset_1937770_3.txt\")  # или как у тебя уже прочитан\n",
+    "submission = make_submission(df, model, thr=0.55).sort_values(\"id\")\n",
+    "submission.to_csv(\"submission.csv\", index=False)\n",
+    "print(\"Готово: submission.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "632514b7",
+   "id": "e19e3d9c",
    "metadata": {},
    "outputs": [],
    "source": []
