--- a/main.ipynb
+++ b/main.ipynb
@@ -134,12 +134,44 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd94485c",
+   "id": "ae2a429c",
    "metadata": {},
    "source": [
-    "## Идея решения\n",
+    "## Основная концепция\n",
     "\n",
-    "предобучить токенизатор по нашим правилам на большом корпусе текстов, чтобы он лучше понимал контекст и структуру языка."
+    "**Машинное обучение на признаках границ между символами** - вместо сложных языковых моделей используется классический подход с извлечением признаков и логистической регрессией.\n",
+    "\n",
+    "## Ключевые компоненты решения:\n",
+    "\n",
+    "### 1. **Представление задачи как бинарной классификации**\n",
+    "- Каждая позиция между соседними символами рассматривается как потенциальное место для пробела\n",
+    "- Модель предсказывает вероятность того, что в данной позиции должен стоять пробел\n",
+    "\n",
+    "### 2. **Богатый набор признаков для каждой границы**\n",
+    "Для позиции между символами `i` и `i+1` извлекаются:\n",
+    "- **Базовые**: биграмма символов, типы символов (русские/латинские/цифры)\n",
+    "- **Контекстные**: окно из 5 символов вокруг позиции\n",
+    "- **Лингвистические**: смены алфавитов, регистра, гласные/согласные переходы\n",
+    "- **Структурные**: позиция в строке, длины слов, пунктуация\n",
+    "- **Паттерны**: CamelCase, аббревиатуры, числовые последовательности\n",
+    "\n",
+    "### 3. **Обучение на синтетических данных**\n",
+    "- Создается корпус типичных объявлений Авито (техника, недвижимость, услуги)\n",
+    "- Из текстов с пробелами генерируются пары: текст без пробелов → позиции пробелов\n",
+    "\n",
+    "### 4. **Пост-обработка правилами пунктуации**\n",
+    "- Корректировка предсказаний согласно правилам русского языка\n",
+    "- Обработка знаков препинания, тире, кавычек\n",
+    "- Удаление ложных пробелов в числах\n",
+    "\n",
+    "## Преимущества подхода:\n",
+    "\n",
+    "- **Быстрота**: логистическая регрессия работает значительно быстрее больших языковых моделей\n",
+    "- **Интерпретируемость**: можно понять, какие признаки важны для модели\n",
+    "- **Контролируемость**: легко добавлять правила и корректировки\n",
+    "- **Легковесность**: не требует больших вычислительных ресурсов\n",
+    "\n",
+    "Это элегантное решение, которое использует классические методы ML с тщательно продуманными признаками для решения специфической задачи восстановления пробелов в объявлениях."
    ]
   },
   {
@@ -1097,28 +1129,191 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "d666dc60",
+   "id": "fd0213d9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def restore_by_positions(s0: str, positions: Set[int]) -> str:\n",
-    "    \"\"\"Из s0 и множества позиций собираем текст с пробелами (удобно для отладки).\"\"\"\n",
-    "    out = []\n",
-    "    for i, ch in enumerate(s0):\n",
-    "        if i in positions:\n",
-    "            out.append(\" \")\n",
-    "        out.append(ch)\n",
-    "    return \"\".join(out)\n",
+    "import re\n",
+    "from typing import List, Iterable\n",
     "\n",
-    "def predict_positions_with_pp(model, s: str, thr: float = 0.55) -> List[int]:\n",
+    "# --- полезные константы ---\n",
+    "\n",
+    "BRANDS = {\n",
+    "    # латиница (встречаются в объявлениях)\n",
+    "    \"iphone\",\"ipad\",\"macbook\",\"imac\",\"airpods\",\n",
+    "    \"samsung\",\"lg\",\"sony\",\"tcl\",\"huawei\",\"honor\",\"oppo\",\"xiaomi\",\"redmi\",\"realme\",\n",
+    "    \"bosch\",\"indesit\",\"atlant\",\"dyson\",\"jbl\",\"tp-link\",\"tplink\",\"msi\",\"asus\",\"dell\",\"lenovo\",\"acer\",\"hp\",\n",
+    "    \"gibson\",\"fender\",\"yamaha\",\"merida\",\"stels\",\"giant\",\"casio\",\"lego\",\"redmond\",\n",
+    "    \"playstation\",\"ps\",\"xbox\",\"nintendo\",\"rtx\",\"gtx\",\"intel\",\"amd\",\"nvidia\",\n",
+    "    \"philips\",\"toshiba\",\"sharp\",\"tcl\",\"olympus\",\"canon\",\"nikon\",\"pixel\",\"oneplus\",\n",
+    "    # кириллица бренды/торговые названия (иногда пишут латиницей и кириллицей вперемешку)\n",
+    "    \"икеа\",\"икея\",\"сбербанк\",\"яндекс\",\"авито\"  # на всякий случай\n",
+    "}\n",
+    "\n",
+    "# для быстрой проверки префиксных совпадений по брендам\n",
+    "BRANDS_SORTED = sorted(BRANDS, key=len, reverse=True)\n",
+    "\n",
+    "# юнит-паттерны: пробел перед словом-единицей\n",
+    "UNITS = r\"(дюйм(?:ов|а)?|см|мм|м|кг|г|мг|л|литр(?:ов|а)?|гб|тб|gb|tb)\"\n",
+    "RE_NUM_UNITS = re.compile(rf\"(\\d+){UNITS}\", flags=re.IGNORECASE)\n",
+    "\n",
+    "# буквы+цифры в одной «склейке» → пробел между ними (для моделей)\n",
+    "RE_LET_DIG = re.compile(r\"([A-Za-zА-Яа-яЁё]+)(\\d+)\")\n",
+    "RE_DIG_LET = re.compile(r\"(\\d+)([A-Za-zА-Яа-яЁё]+)\")\n",
+    "\n",
+    "# более специфичные игровые / «железные» шаблоны\n",
+    "# RTX4060Ti, GTX1080, iPhone15Pro, LG55, PS5, XboxSeriesS\n",
+    "RE_GPU = re.compile(r\"(rtx|gtx)(\\d{3,4}[a-z]{0,3})\", flags=re.IGNORECASE)\n",
+    "RE_IPHONE = re.compile(r\"(iphone)(\\d{1,2}[a-z]*)\", flags=re.IGNORECASE)\n",
+    "RE_LG_NUM = re.compile(r\"(lg)(\\d{2,3})\", flags=re.IGNORECASE)\n",
+    "RE_PS = re.compile(r\"(ps)(\\d{1,2})\", flags=re.IGNORECASE)\n",
+    "RE_XBOX_SERIES = re.compile(r\"(xbox)(series)([a-z])?\", flags=re.IGNORECASE)\n",
+    "\n",
+    "# пунктуация — на этих символах пробел перед ними обычно не нужен\n",
+    "PUNCT = set(\",.!?:;)]}»\")\n",
+    "\n",
+    "\n",
+    "def _add(pos_set: set, i: int, n: int):\n",
+    "    \"\"\"Добавить позицию i (между s[i-1] и s[i]) если в допустимых границах.\"\"\"\n",
+    "    if 1 <= i <= n-1:\n",
+    "        pos_set.add(i)\n",
+    "\n",
+    "\n",
+    "def _regex_split_positions(s: str, pat: re.Pattern, group_left: int, group_right: int) -> Iterable[int]:\n",
     "    \"\"\"\n",
-    "    Полная обёртка: убираем пробелы, предсказываем позиции, делаем пост-процессинг.\n",
-    "    Возвращаем ОТСОРТИРОВАННЫЙ список индексов.\n",
+    "    Возвращает позиции для пробела между концом group_left и началом group_right\n",
+    "    в матче паттерна pat.\n",
     "    \"\"\"\n",
-    "    s0 = strip_spaces(str(s))\n",
-    "    pos = positions_from_model(model, s0, thr=thr)\n",
-    "    pos = postprocess_positions(s0, pos)\n",
-    "    return sorted(pos)"
+    "    for m in pat.finditer(s):\n",
+    "        i = m.start(group_right)  # позиция правой группы = индекс вставки пробела\n",
+    "        yield i\n",
+    "\n",
+    "\n",
+    "def _brand_boundaries(s: str) -> List[int]:\n",
+    "    \"\"\"\n",
+    "    Найти места, где начинается бренд (латиница/кириллица) сразу после «русского» слова/цифр,\n",
+    "    и поставить пробел перед брендом.\n",
+    "    \"\"\"\n",
+    "    s_low = s.lower()\n",
+    "    n = len(s)\n",
+    "    pos = set()\n",
+    "    for start in range(n):\n",
+    "        # экономим: проверяем только там, где смена типа (напр. кириллица -> латиница) или буква после буквы\n",
+    "        ch = s_low[start]\n",
+    "        if not ch.isalnum():\n",
+    "            continue\n",
+    "        # ищем максимальный бренд, который совпадает с префиксом s_low[start:]\n",
+    "        for b in BRANDS_SORTED:\n",
+    "            if s_low.startswith(b, start):\n",
+    "                # условие разумной границы: слева должен быть буква/цифра и это НЕ начало строки\n",
+    "                if start > 0 and s[start-1].isalnum():\n",
+    "                    _add(pos, start, n)\n",
+    "                # а ещё часто нужен пробел ПОСЛЕ бренда и ПЕРЕД цифрой/моделью: Samsung55 → Samsung 55\n",
+    "                end = start + len(b)\n",
+    "                if end < n and s[end].isdigit():\n",
+    "                    _add(pos, end, n)\n",
+    "                break  # нашёл самый длинный бренд — дальше не проверяем\n",
+    "    return sorted(pos)\n",
+    "\n",
+    "\n",
+    "def _letter_digit_boundaries(s: str) -> List[int]:\n",
+    "    \"\"\"Пробелы между буквенной и цифровой частью и обратно (A54 → A 54, 55дюймов → 55 дюймов).\"\"\"\n",
+    "    pos = set()\n",
+    "    n = len(s)\n",
+    "    for m in RE_LET_DIG.finditer(s):\n",
+    "        _add(pos, m.start(2), n)  # перед цифрами\n",
+    "    for m in RE_DIG_LET.finditer(s):\n",
+    "        _add(pos, m.start(2), n)  # перед буквами\n",
+    "    # юниты: 55дюймов → 55 дюймов, 70литров → 70 литров, 128gb → 128 gb\n",
+    "    for m in RE_NUM_UNITS.finditer(s):\n",
+    "        _add(pos, m.start(2), n)\n",
+    "    return sorted(pos)\n",
+    "\n",
+    "\n",
+    "def _model_specific_boundaries(s: str) -> List[int]:\n",
+    "    \"\"\"Спец-кейсы для RTX/GTX, iPhone, LG55, PS5, Xbox Series S.\"\"\"\n",
+    "    pos = set()\n",
+    "    n = len(s)\n",
+    "    for i in _regex_split_positions(s, RE_GPU, 1, 2):\n",
+    "        _add(pos, i, n)\n",
+    "    for i in _regex_split_positions(s, RE_IPHONE, 1, 2):\n",
+    "        _add(pos, i, n)\n",
+    "    for i in _regex_split_positions(s, RE_LG_NUM, 1, 2):\n",
+    "        _add(pos, i, n)\n",
+    "    for i in _regex_split_positions(s, RE_PS, 1, 2):\n",
+    "        _add(pos, i, n)\n",
+    "    # xbox + series + S|X…\n",
+    "    for m in RE_XBOX_SERIES.finditer(s):\n",
+    "        _add(pos, m.start(2), n)  # ...xbox|series...\n",
+    "        if m.group(3):            # ...series|s\n",
+    "            _add(pos, m.start(3), n)\n",
+    "    return sorted(pos)\n",
+    "\n",
+    "\n",
+    "def _clean_punct_positions(s: str, positions: Iterable[int]) -> List[int]:\n",
+    "    \"\"\"\n",
+    "    Убрать пробелы ПЕРЕД пунктуацией и ДВОЙНЫЕ пробелы (две соседние позиции).\n",
+    "    Позиция i вставляет пробел между s[i-1] и s[i].\n",
+    "    \"\"\"\n",
+    "    n = len(s)\n",
+    "    pos = sorted(set(p for p in positions if 1 <= p <= n-1))\n",
+    "\n",
+    "    cleaned = []\n",
+    "    last = -10\n",
+    "    for p in pos:\n",
+    "        # не ставим пробел перед пунктуацией\n",
+    "        if s[p] in PUNCT:\n",
+    "            continue\n",
+    "        # не делаем двойные пробелы вплотную\n",
+    "        if p == last + 1:\n",
+    "            # оставим тот, у которого «правый» символ не пунктуация (мы уже отфильтровали),\n",
+    "            # в споре — оставляем первый\n",
+    "            continue\n",
+    "        cleaned.append(p)\n",
+    "        last = p\n",
+    "    return cleaned\n",
+    "\n",
+    "\n",
+    "def apply_domain_rules(s_no_spaces: str, positions: List[int]) -> List[int]:\n",
+    "    \"\"\"\n",
+    "    Доменные пост-правила: возвращает обновлённый список позиций.\n",
+    "    \"\"\"\n",
+    "    n = len(s_no_spaces)\n",
+    "    base = set(positions)\n",
+    "\n",
+    "    # 1) Буквы/цифры/юниты\n",
+    "    for i in _letter_digit_boundaries(s_no_spaces):\n",
+    "        base.add(i)\n",
+    "\n",
+    "    # 2) Бренды (начало бренда / бренд -> цифра)\n",
+    "    for i in _brand_boundaries(s_no_spaces):\n",
+    "        base.add(i)\n",
+    "\n",
+    "    # 3) Специализированные модели\n",
+    "    for i in _model_specific_boundaries(s_no_spaces):\n",
+    "        base.add(i)\n",
+    "\n",
+    "    # 4) Чистка пунктуации и двойных пробелов\n",
+    "    out = _clean_punct_positions(s_no_spaces, base)\n",
+    "\n",
+    "    return sorted(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "870fd171",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_positions_with_rules(model, s: str, thr: float) -> List[int]:\n",
+    "    # s здесь — ИСХОДНАЯ строка без пробелов (как у Stepik)\n",
+    "    # 1) базовый предикт (твой текущий)\n",
+    "    base_pos = predict_positions_with_pp(model, s, thr=thr)  # или restore → обратно в позиции\n",
+    "\n",
+    "    # 2) доменные правила\n",
+    "    pos = apply_domain_rules(s, base_pos)\n",
+    "    return pos"
    ]
   },
   {
@@ -1132,17 +1327,17 @@
      "output_type": "stream",
      "text": [
       "Готово: submission.csv\n",
-      "   id  predicted_positions\n",
-      "0   0          [5, 10, 12]\n",
-      "1   1        [3, 6, 7, 10]\n",
-      "2   2  [4, 12, 13, 20, 21]\n",
-      "3   3          [5, 10, 18]\n",
-      "4   4              [5, 10]\n",
-      "5   5           [6, 7, 14]\n",
-      "6   6              [5, 14]\n",
-      "7   7          [3, 12, 15]\n",
-      "8   8          [6, 13, 16]\n",
-      "9   9              [5, 12]\n"
+      "   id predicted_positions\n",
+      "0   0         [5, 10, 12]\n",
+      "1   1          [3, 6, 10]\n",
+      "2   2         [4, 12, 20]\n",
+      "3   3         [5, 10, 18]\n",
+      "4   4             [5, 10]\n",
+      "5   5             [6, 14]\n",
+      "6   6         [5, 14, 19]\n",
+      "7   7         [3, 12, 15]\n",
+      "8   8         [6, 13, 16]\n",
+      "9   9             [5, 12]\n"
      ]
     }
    ],
@@ -1156,22 +1351,13 @@
     "    return \"[\" + \", \".join(str(i) for i in indices) + \"]\"\n",
     "\n",
     "def make_submission(df: pd.DataFrame, model, thr: float = 0.55) -> pd.DataFrame:\n",
-    "    preds_pos = []\n",
     "    preds_str = []\n",
-    "    preds_text = []\n",
-    "\n",
-    "    for s in df[\"text_no_spaces\"]:\n",
-    "        s0 = strip_spaces(str(s))  # убираем возможные пробелы\n",
-    "        pos = predict_positions_with_pp(model, s0, thr=thr)  # список индексов\n",
-    "        preds_pos.append(pos)\n",
-    "        preds_str.append(to_str_list(pos))\n",
-    "        preds_text.append(restore_by_positions(s0, set(pos)))  # восстановленный текст\n",
-    "\n",
+    "    for s in df[\"text_no_spaces\"].astype(str):\n",
+    "        s0 = s  # уже без пробелов по условию датасета\n",
+    "        pos = predict_positions_with_rules(model, s0, thr=thr)\n",
+    "        preds_str.append(\"[\" + \", \".join(map(str, pos)) + \"]\")\n",
     "    sub = df.copy()\n",
     "    sub[\"predicted_positions\"] = preds_str\n",
-    "    sub[\"predicted_text\"] = preds_text  # для проверки руками\n",
-    "\n",
-    "    # оставляем только нужное для сабмита\n",
     "    return sub[[\"id\", \"predicted_positions\"]]\n",
     "\n",
     "# генерация submission.csv\n",
